Ch03_검색/compiling_error.txt
/Users/JoSuYeon/Documents/GitHub/Algorithm_c/Ch03_검색/3-5.c:8:9: error: expected expression
        if (a* < *b)
               ^
/Users/JoSuYeon/Documents/GitHub/Algorithm_c/Ch03_검색/3-5.c:8:12: error: use of undeclared identifier 'b'
        if (a* < *b)
                  ^
/Users/JoSuYeon/Documents/GitHub/Algorithm_c/Ch03_검색/3-5.c:10:17: error: use of undeclared identifier 'b'
        else if (*a > *b)
                       ^
3 errors generated.
